hide x overflow to prevent horizontal scrollbar

--- a/corehq/apps/hqwebapp/static/app_manager/less/navigation.less
+++ b/corehq/apps/hqwebapp/static/app_manager/less/navigation.less
@@ -24,7 +24,7 @@ nav.appmanager-content {
 @appnav-secondary-width: 35px;
 
 .appnav-menu-scroll {
-  overflow-x: visible;
+  overflow-x: hidden;
   overflow-y: auto;
 }
 
